--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <h1 class="experience-title">SOBRE MIM</h1>
                     <h2 class="adress">Caririaçu, Ceará</h2>
                     <p class="informations-content">Olá, sou desenvolvedor Front-end e atualmente estou estudando para melhorar ainda mais na área. No futuro busco ser Desenvolvedor fullstack. Em 2020 comecei a estudar na EEEP Paulo Barbosa Leite, onde realizei o curso de Técnico em Informática. Desde então, tenho uma relação de amor e ódio com a programação. A parte do ódio é por quebrar a cabeça com bugs em certos momentos kkkk. Estou sempre buscando me aperfeiçoar na área, ajudando e aprendendo todas as vezes. </p>
-                    <a href="./assets/" class="curriculum" download="">
+                    <a href="./assets/curriculo.docx" class="curriculum" download="">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cloud-arrow-down-fill" viewBox="0 0 16 16">
                             <path d="M8 2a5.53 5.53 0 0 0-3.594 1.342c-.766.66-1.321 1.52-1.464 2.383C1.266 6.095 0 7.555 0 9.318 0 11.366 1.708 13 3.781 13h8.906C14.502 13 16 11.57 16 9.773c0-1.636-1.242-2.969-2.834-3.194C12.923 3.999 10.69 2 8 2zm2.354 6.854-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 1 1 .708-.708L7.5 9.293V5.5a.5.5 0 0 1 1 0v3.793l1.146-1.147a.5.5 0 0 1 .708.708z"/>
                           </svg>&nbsp;&nbsp;Currículo
