--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
                             <td>
                                 <img class="skills-images" src="./images/Javascript.png" alt="Javascript"/>
                             </td>
+                            <td>
+                                <img class="skills-images" src="./images/antd.png" />
+                            </td>
                         </tr>
                         <tr>
                             <td>
@@ -100,6 +103,40 @@
                             </td>
                             <td>
                                 <img class="skills-images" src="./images/Sass.png" alt="Sass"/>
+                            </td>
+                            <td>
+                                <img class="skills-images" src="./images/Tailwinds.png" alt="Tailwind CSS"/>
+                            </td>
+                            <td>
+                                <img class="skills-images" src="./images/material ui.png" alt="Material UI"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img class="skills-images" src="./images/nodejs.png" alt="NodeJs"/>
+                            </td>
+                            <td>
+                                <img class="skills-images" src="./images/nextjs.png" alt="NextJs"/>
+                            </td>
+                            <td>
+                                <img class="skills-images" src="./images/typescript.png" alt="Typescript"/>
+                            </td>
+                            <td>
+                                <img class="skills-images" src="./images/microsoft-office.png" alt="Microsoft Office"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img class="skills-images" src="./images/bootstrap.png" alt="Bootstrap"/>
+                            </td>
+                            <td>
+                                <img class="skills-images" src="./images/git.png" alt="Git"/>
+                            </td>
+                            <td>
+                                <img class="skills-images" src="./images/figma.png" alt="Figma"/>
+                            </td>
+                            <td>
+                                <img class="skills-images" src="./images/mysql.png" alt="MySQL">
                             </td>
                         </tr>
                     </table>
@@ -166,8 +203,8 @@
                 <div data-aos="fade-left" class="card">
                     <img class="projects-images" src="./images/Black.png" alt="Imagem do projeto"/>
                     <h1 class="card-title">Em breve</h1>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis sunt beatae nihil vitae quo neque saepe, quam unde expedita perferendis nesciunt eius ducimus fugit aperiam libero earum excepturi dolor possimus!</p>
-                    <p class="card-p">Tecnologias usadas: </p>
+                    <p>Projeto envolvendo fullstack com simulação de venda e autenticação de usuário.</p>
+                    <p class="card-p">Tecnologias usadas: Next, React, Typescript, Tailwind CSS.</p>
                     <a href="#" class="medias" target="_blank">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye-fill" viewBox="0 0 16 16">
                             <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"/>
